sumo/tests/netconvert/import/XML/errors/broken_edge/edge#shape__false1d/errors.netconvert
Error: Shape of a(n) edge is broken: the position is not made of two dimensions.
Quitting (on error).
